# finguru

./: .env.example  .gitignore  AWSGURU-BLUEPRINT.md  CLAUDE.md  README.md  docker-compose.yml  run.sh  start-prod.sh
.claude/workflows/: chart-fanout.mjs  content-production.mjs  ko-review.mjs  ko-translate.mjs  strategy-lessons.mjs
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: config.py  main.py  ollama_client.py  schemas.py  sse.py
api/app/agent/: graph.py  websearch.py
api/app/market_data/: cache.py  dart.py  edgar.py  fmp.py  kis.py  naver.py  schema.py
api/app/rag/: chunk.py  embeddings.py  ingest.py  retriever.py  store.py
api/app/routes/: chat.py  market_data.py
api/scripts/: tune_min_score.py
deploy/: com.finguru.app.plist  install-launchd.sh
docs/: TODO-i18n-korean.md  guru-review-2026-06.md  ko-translation-review-2026-06.md  new-schools-roster-2026-06.md  practical-modules-2026-07.md  strategy-learning-paths-2026-06.md
scripts/: validate_ko.py
web/: .env.example  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: Callout.tsx  ChatMarkdown.tsx  ChatWidget.tsx  CountUp.tsx  CoverArt.tsx  GlossaryTerm.tsx  LessonLayout.tsx  LessonProgress.tsx  LocaleSwitcher.tsx  LoginForm.tsx  Mdx.tsx  Quiz.tsx  Reveal.tsx  ServiceWorker.tsx  SiteHeader.tsx  StrategyProgress.tsx  StrategyQuiz.tsx  coverManifest.ts  photoManifest.ts
web/content/: ict-research-brief.md
web/lib/: auth.ts  backtest.ts  cheatsheets.ts  (+15 more)
(+283 files in other folders)
