[project]
name = "finguru-api"
version = "0.1.0"
description = "FastAPI + LangGraph RAG tutor for the finguru technical-analysis study guide"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "chromadb>=0.5.20",
    "fastembed>=0.4.2",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
]

[tool.uv]
package = false
